--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-node_modules
+node_modules/
+.next/
+out/
+.env
+.env.local
+.env.development.local
+.env.production
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+.swc/
+tsconfig.tsbuildinfo
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
