--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -36,6 +36,11 @@ env:
     availability:
       - BUILD
       - RUNTIME
+  - variable: STRIPE_SECRET_KEY
+    secret: STRIPE_SECRET_KEY
+    availability:
+      - BUILD
+      - RUNTIME
   - variable: STRIPE_WEBHOOK_SECRET
     secret: STRIPE_WEBHOOK_SECRET
     availability:
